--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <meta name="theme-color" content="#000000" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Portfolio</title>
-        <link rel="shortcut icon" href="./icon.png" type="image/x-icon"/>
+        <link rel="shortcut icon" href="./icon.jpg" type="image/x-icon"/>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
